# ballistic-solver

./: .gitignore  CMakeLists.txt  README.md  pyproject.toml
.github/workflows/: pypi.yml  release.yml  wheel.yml
benchmarks/: linear_cases.py
bindings/dotnet/: BallisticSolver.cs
bindings/python/: CMakeLists.txt  pybind_module.cpp  pyproject.toml
bindings/python/ballistic_solver/: __init__.py
examples/c/: basic.c
examples/cpp/: basic.cpp
examples/csharp/: Program.cs
examples/csharp/BallisticCSharp/: BallisticCSharp.csproj  Program.cs
examples/dotnet/: Basic.cs
include/: ballistic_solver_c_api.h  ballistic_solver_core.hpp
include/ballistic/: ballistic_c_api.h  ballistic_solver.hpp
src/: ballistic_c_api.cpp  ballistic_solver_c_api.cpp
tests/: random_regression.py  smoke_test.c
