[build-system]
requires = [
  "scikit-build-core>=0.11",
  "pybind11>=2.11",
  "setuptools_scm>=8",
]
build-backend = "scikit_build_core.build"

[project]
name = "ballistic-solver"
dynamic = ["version"]
requires-python = ">=3.10"
readme = "README.md"
license = "MIT"
description = "Numerical launch-angle solver for moving targets under gravity and quadratic drag."

[tool.scikit-build]
cmake.source-dir = "bindings/python"
cmake.build-type = "Release"
wheel.packages = ["bindings/python/ballistic_solver"]

sdist.include = ["include/**", "src/**", "bindings/python/**", "CMakeLists.txt"]

[tool.scikit-build.metadata.version]
provider = "scikit_build_core.metadata.setuptools_scm"

[tool.setuptools_scm]
tag_regex = "^v(?P<version>\\d+\\.\\d+\\.\\d+)$"
write_to = "bindings/python/ballistic_solver/_version.py"
